re compat with java 17